--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Profeta - Edición Final</title>
+    <title>El Profeta - Edición de Oro</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&family=Old+Standard+TT:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 
         :root {
-            --pergamino: #e4d5b7; --tinta: #1a1a1a;
-            --oro: #d4af37; --oro-bril: #ffd700;
-            --sangre: #8b0000; --fuego: #ff4500;
+            --pergamino: #e4d5b7; --tinta: #0f0f0f;
+            --oro: #d4af37; --oro-oscuro: #8b6d45;
+            --sangre: #ff1a1a; --fuego: #ff4500;
         }
 
         body {
@@ -22,101 +22,100 @@
             background: var(--pergamino) url('https://www.transparenttextures.com/patterns/paper-fibers.png');
             width: 100%; max-width: 420px; min-height: 100vh;
             margin: auto; padding: 12px; box-sizing: border-box;
-            box-shadow: 0 0 40px rgba(0,0,0,0.8);
+            box-shadow: 0 0 40px rgba(0,0,0,0.8); border: 1px solid #222;
         }
 
         /* --- CABECERA --- */
         header { text-align: center; border-bottom: 4px double var(--tinta); margin-bottom: 10px; }
-        header h1 { font-family: 'Cinzel', serif; font-size: 32px; margin: 0; font-weight: 900; }
-        
-        /* --- CAJA DE RUMORES --- */
-        .rumores-container {
-            background: #111; color: var(--oro); border: 1px solid var(--oro);
+        header h1 { font-family: 'Cinzel', serif; font-size: 34px; margin: 0; font-weight: 900; }
+        .meta-bar { display: flex; justify-content: space-between; border-top: 1px solid #000; padding: 3px 5px; font-size: 8px; font-family: 'Cinzel'; font-weight: bold; }
+
+        /* --- RUMORES REFINADOS --- */
+        .rumores-box {
+            background: #1a1a1a; color: var(--oro); border: 1px solid var(--oro);
             padding: 10px; margin: 10px 0; border-radius: 4px;
-            box-shadow: inset 0 0 10px #000;
+            box-shadow: inset 0 0 15px #000; position: relative; overflow: hidden;
         }
-        .rumores-header { font-family: 'Cinzel'; font-size: 9px; text-align: center; border-bottom: 1px solid #333; margin-bottom: 5px; color: #888; letter-spacing: 2px; }
-        #tick { font-family: 'Cinzel'; font-size: 11px; text-align: center; min-height: 30px; display: flex; align-items: center; justify-content: center; }
+        .rumores-box::before { content: "❖ RUMORES DE PASILLO ❖"; display: block; font-size: 9px; text-align: center; margin-bottom: 5px; letter-spacing: 2px; color: var(--oro-oscuro); }
+        #tick { font-family: 'Cinzel'; font-size: 11px; text-align: center; font-style: italic; min-height: 30px; display: flex; align-items: center; justify-content: center; transition: 0.5s; }
 
-        /* --- SECCIÓN TÍTULOS --- */
-        .sec-title { font-family: 'Cinzel'; background: #000; color: var(--oro); text-align: center; padding: 6px; font-size: 11px; margin: 20px 0 15px 0; letter-spacing: 3px; }
-
-        /* --- DECRETOS REALES (NEGRO Y DORADO) --- */
+        /* --- DECRETO REAL (NEGRO Y DORADO) --- */
         .card-oficial {
             background: #000 url('https://www.transparenttextures.com/patterns/dark-leather.png') !important;
-            border: 2px solid var(--oro) !important; padding: 15px; margin-bottom: 20px;
-            box-shadow: 0 5px 15px rgba(212, 175, 55, 0.3);
+            border: 2px solid var(--oro) !important; padding: 15px; margin-bottom: 25px;
+            box-shadow: 0 5px 20px rgba(212, 175, 55, 0.4); border-radius: 0;
         }
-        .card-oficial h3 { color: var(--oro) !important; font-family: 'Cinzel'; margin: 0; border-bottom: 1px solid var(--oro); padding-bottom: 5px; }
-        .card-oficial p, .card-oficial small { color: #e0e0e0 !important; }
+        .card-oficial::before { content: "⚜ EDICIÓN MINISTERIAL ⚜"; display: block; text-align: center; font-family: 'Cinzel'; font-size: 9px; color: var(--oro); border-bottom: 1px solid var(--oro); margin-bottom: 10px; padding-bottom: 5px; }
+        .card-oficial h3 { color: var(--oro) !important; font-size: 22px !important; text-shadow: 1px 1px 2px #000; }
+        .card-oficial p, .card-oficial small { color: #f0f0f0 !important; }
+        .card-oficial img { border: 2px solid var(--oro) !important; filter: grayscale(1) contrast(1.2); }
         .card-oficial .voto-btn { border-color: var(--oro); color: var(--oro); }
 
-        /* --- VOCIFERADORAS ALUMNOS (ROJO Y FUEGO) --- */
+        /* --- VOCIFERADORA --- */
         .vociferadora {
-            background: linear-gradient(135deg, #8b0000 0%, #ff4500 100%) !important;
-            border: none !important; padding: 12px; margin-bottom: 20px;
-            box-shadow: 0 0 15px var(--sangre);
-            animation: shake 0.2s infinite alternate;
+            background: linear-gradient(135deg, #8b0000 0%, #ff1a1a 100%) !important;
+            padding: 12px; margin-bottom: 20px; border: none !important;
+            animation: pulse-red 1.5s infinite alternate, shake 0.2s infinite;
+            box-shadow: 0 0 20px var(--sangre);
         }
-        .vociferadora h3, .vociferadora p, .vociferadora small { color: #fff !important; text-shadow: 1px 1px 5px #000; }
-        
-        @keyframes shake { from { transform: rotate(0.5deg); } to { transform: rotate(-0.5deg); } }
+        .vociferadora h3, .vociferadora p, .vociferadora small { color: white !important; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); }
+        @keyframes pulse-red { from { filter: brightness(1); } to { filter: brightness(1.3); box-shadow: 0 0 30px var(--fuego); } }
+        @keyframes shake { 0% { transform: rotate(0.3deg); } 100% { transform: rotate(-0.3deg); } }
 
-        /* --- NOTICIA NORMAL --- */
-        .card-alumno { border-bottom: 1px solid rgba(0,0,0,0.2); padding: 12px 0; margin-bottom: 10px; }
-        .article h3 { font-family: 'Cinzel'; font-size: 19px; margin: 0; }
+        /* --- NOTICIA ALUMNO --- */
+        .card-alumno { border-bottom: 1px solid rgba(0,0,0,0.2); padding: 15px 0; margin-bottom: 10px; }
+        .article h3 { font-family: 'Cinzel'; font-size: 19px; margin: 0; line-height: 1.1; }
         .article img { width: 100%; border: 1px solid #000; margin: 8px 0; }
         .article p { font-size: 15px; line-height: 1.4; text-align: justify; }
 
-        /* --- FORMULARIO --- */
-        .magic-form { background: rgba(0,0,0,0.05); padding: 12px; border: 1px dashed #000; margin-top: 30px; }
-        input, textarea, select { width: 100%; padding: 10px; margin: 5px 0; border: 1px solid #000; font-family: 'Special Elite'; font-size: 13px; box-sizing: border-box; }
-        .btn-send { background: #000; color: var(--oro); border: 1px solid var(--oro); padding: 15px; width: 100%; font-family: 'Cinzel'; font-weight: bold; cursor: pointer; }
+        .sec-title { font-family: 'Cinzel'; background: #000; color: var(--oro); text-align: center; padding: 6px; font-size: 11px; margin: 25px 0 15px 0; letter-spacing: 3px; }
 
-        .voto-btn { background: none; border: 1px solid #000; padding: 5px 10px; font-family: 'Cinzel'; font-size: 9px; }
+        /* --- FORMS --- */
+        .magic-form { background: rgba(0,0,0,0.04); padding: 12px; border: 1px dashed #000; margin-top: 30px; }
+        input, textarea, select { width: 100%; padding: 10px; margin: 5px 0; border: 1px solid #000; font-family: 'Special Elite'; box-sizing: border-box; }
+        .btn-send { background: #000; color: var(--oro); border: 1px solid var(--oro); padding: 12px; width: 100%; font-family: 'Cinzel'; font-weight: bold; cursor: pointer; }
+        .voto-btn { background: none; border: 1px solid #000; padding: 5px 10px; font-family: 'Cinzel'; font-size: 9px; cursor: pointer; }
     </style>
 </head>
 <body>
 
 <div class="newspaper">
-    <div id="login-zone" style="text-align:center; padding: 50px 10px;">
-        <h1 style="font-family:'Cinzel'">DEPARTAMENTO DE SEGURIDAD</h1>
+    <div id="login-zone" style="text-align:center; padding: 40px 10px;">
+        <h1 style="font-family:'Cinzel'">IDENTIFÍQUESE</h1>
         <input type="text" id="u-n" placeholder="Nombre">
-        <input type="password" id="u-p" placeholder="Clave">
+        <input type="password" id="u-p" placeholder="Contraseña">
         <select id="u-h">
             <option value="GRY">🦁 GRYFFINDOR</option>
             <option value="SLY">🐍 SLYTHERIN</option>
             <option value="HUF">🦡 HUFFLEPUFF</option>
             <option value="RAV">🦅 RAVENCLAW</option>
         </select>
-        <button class="btn-send" onclick="login()">ACCEDER</button>
+        <button class="btn-send" onclick="login()">INGRESAR AL PROFETA</button>
     </div>
 
     <div id="main-web" style="display:none;">
         <header>
             <h1>EL PROFETA</h1>
-            <div style="display:flex; justify-content:space-between; font-size:10px; font-family:'Cinzel';">
+            <div class="meta-bar">
                 <span id="f-m"></span>
+                <span id="h-m"></span>
                 <span onclick="logout()" style="color:var(--sangre); cursor:pointer;">[ SALIR ]</span>
             </div>
         </header>
 
-        <div class="rumores-container">
-            <div class="rumores-header">❖ RUMORES DE PASILLO ❖</div>
-            <div id="tick">Descifrando correspondencia...</div>
-        </div>
+        <div class="rumores-box"><div id="tick">Leyendo pergaminos...</div></div>
 
         <div id="feed-oficial"></div>
         <div id="feed-comunidad"></div>
 
         <div class="sec-title">REDACTAR</div>
         <div class="magic-form">
-            <input type="text" id="t-t" placeholder="Titular">
-            <textarea id="t-m" rows="3" placeholder="Contenido..."></textarea>
+            <input type="text" id="t-t" placeholder="Título">
+            <textarea id="t-m" rows="3" placeholder="Mensaje..."></textarea>
             <input type="text" id="t-i" placeholder="URL Imagen">
             <div style="display:flex; gap:5px;">
                 <select id="t-r"><option value="ALUMNO">Alumno</option><option value="OFICIAL">Escritor Real</option></select>
-                <select id="t-e"><option value="normal">Pergamino</option><option value="vociferadora">Vociferadora 🔥</option></select>
+                <select id="t-e"><option value="normal">Normal</option><option value="vociferadora">Vociferadora 🔥</option></select>
             </div>
             <button class="btn-send" onclick="enviar()">PUBLICAR ✨</button>
         </div>
@@ -126,16 +125,16 @@
 <script>
     const DB = "https://profeta-9c8df-default-rtdb.firebaseio.com/periodico";
     const PASS = "Orion2026";
-    let sesion = JSON.parse(localStorage.getItem('p_v14'));
+    let sesion = JSON.parse(localStorage.getItem('p_v13'));
 
     const RUMORES = [
-        "¿Quién robó las branquialgas del despacho de Snape?",
-        "Se dice que un alumno de Ravenclaw descubrió una nueva constelación.",
-        "¡Avistamiento! El calamar gigante saludó a unos alumnos de primer año.",
-        "La cerveza de mantequilla de Las Tres Escobas tiene un ingrediente secreto.",
-        "Rumor: Filtro de amor detectado en el Gran Comedor.",
-        "Se escuchan gritos en el tercer piso... otra vez.",
-        "¿Es cierto que el sauce boxeador tiene un nudo secreto?"
+        "¿Quién es el misterioso alumno que vuela de noche?",
+        "Se dice que el profesor de pociones esconde un secreto...",
+        "¡Visto! Un hipogrifo cerca del campo de Quidditch.",
+        "La dama gorda ha olvidado la contraseña de nuevo.",
+        "Rumor: El Ministerio prepara una inspección sorpresa.",
+        "Se filtran las respuestas del examen de TIMO.",
+        "¿Gryffindor o Slytherin? La copa está más reñida que nunca."
     ];
 
     function updateRumors() {
@@ -145,7 +144,7 @@
             setTimeout(() => {
                 t.innerText = RUMORES[Math.floor(Math.random()*RUMORES.length)];
                 t.style.opacity = 1;
-            }, 400);
+            }, 500);
         }
     }
     setInterval(updateRumors, 6000);
@@ -155,17 +154,18 @@
         const p = document.getElementById('u-p').value.trim();
         if(!n || !p) return;
         sesion = { n, h: document.getElementById('u-h').value };
-        localStorage.setItem('p_v14', JSON.stringify(sesion));
+        localStorage.setItem('p_v13', JSON.stringify(sesion));
         start();
     }
 
-    function logout() { localStorage.removeItem('p_v14'); location.reload(); }
+    function logout() { localStorage.removeItem('p_v13'); location.reload(); }
 
     function start() {
         if(!sesion) return;
         document.getElementById('login-zone').style.display='none';
         document.getElementById('main-web').style.display='block';
-        document.getElementById('f-m').innerText = new Date().toLocaleDateString('es-ES', {day:'numeric', month:'long'}).toUpperCase();
+        document.getElementById('f-m').innerText = new Date().toLocaleDateString('es-ES',{day:'numeric',month:'long'}).toUpperCase();
+        setInterval(()=> { document.getElementById('h-m').innerText = new Date().toLocaleTimeString('es-ES',{hour:'2-digit',minute:'2-digit'}); }, 1000);
         load();
     }
 
@@ -200,7 +200,7 @@
                 if(n.rango === "OFICIAL") hOf += html; else hAl += html;
             });
             document.getElementById('feed-oficial').innerHTML = hOf ? `<div class="sec-title">DECRETOS REALES</div>`+hOf : "";
-            document.getElementById('feed-comunidad').innerHTML = `<div class="sec-title">CORREO DE HOGWARTS</div>`+hAl;
+            document.getElementById('feed-comunidad').innerHTML = `<div class="sec-title">CRÓNICAS DE ALUMNOS</div>`+hAl;
         });
     }
 
