--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Profeta - Edición Legendaria</title>
+    <title>El Profeta - Edición de Oro y Galeones</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 
@@ -11,80 +11,74 @@
             --pergamino: #e4d5b7; --tinta: #0f0f0f;
             --oro: #d4af37; --oro-oscuro: #8b6d45;
             --sangre: #ff1a1a; --fuego: #ff4500;
-            --confesion: #f2e9d0;
         }
 
-        body { margin: 0; background: #000; color: var(--tinta); font-family: 'Old Standard TT', serif; padding: 5px; overflow-x: hidden; }
+        body { margin: 0; background: #000; color: var(--tinta); font-family: 'Old Standard TT', serif; padding: 5px; }
 
         .newspaper {
             background: var(--pergamino) url('https://www.transparenttextures.com/patterns/paper-fibers.png');
             width: 100%; max-width: 420px; min-height: 100vh;
             margin: auto; padding: 12px; box-sizing: border-box;
-            box-shadow: 0 0 50px rgba(0,0,0,1); border: 1px solid #333;
+            box-shadow: 0 0 50px rgba(0,0,0,1);
         }
 
-        /* --- CABECERA Y METADATOS --- */
+        /* --- CABECERA --- */
         header { text-align: center; border-bottom: 4px double var(--tinta); margin-bottom: 5px; }
-        header h1 { font-family: 'Cinzel', serif; font-size: 34px; margin: 0; font-weight: 900; letter-spacing: -1px; }
+        header h1 { font-family: 'Cinzel', serif; font-size: 34px; margin: 0; font-weight: 900; }
         
-        .status-bar { display: flex; justify-content: space-around; font-size: 9px; font-family: 'Cinzel'; color: #555; border-bottom: 1px solid rgba(0,0,0,0.1); padding-bottom: 2px; margin-bottom: 5px; }
         .meta-bar { display: flex; justify-content: space-between; padding: 3px 5px; font-size: 9px; font-family: 'Cinzel'; font-weight: bold; border-top: 1px solid #000; }
 
-        /* --- RUMORES --- */
-        .rumores-box {
-            background: #111; color: var(--oro); border: 1px solid var(--oro);
-            padding: 8px; margin: 10px 0; border-radius: 4px; box-shadow: inset 0 0 15px #000;
+        /* --- PREMIO SEMANAL --- */
+        .banner-premio {
+            background: linear-gradient(to right, #000, var(--oro-oscuro), #000);
+            color: var(--oro); text-align: center; padding: 10px;
+            font-family: 'Cinzel'; font-size: 11px; border: 1px solid var(--oro);
+            margin: 10px 0; box-shadow: 0 0 15px rgba(212, 175, 55, 0.5);
+            animation: glow 2s infinite alternate;
         }
-        #tick { font-family: 'Cinzel'; font-size: 10px; text-align: center; font-style: italic; min-height: 25px; display: flex; align-items: center; justify-content: center; transition: 0.5s; }
+        @keyframes glow { from { opacity: 0.8; } to { opacity: 1; box-shadow: 0 0 25px var(--oro); } }
 
-        /* --- DECRETO REAL (ESCRITORES) --- */
+        /* --- TABLA DE LÍDERES --- */
+        .ranking-box {
+            background: rgba(0,0,0,0.05); border: 1px solid #000;
+            padding: 10px; margin-bottom: 15px; font-family: 'Cinzel';
+        }
+        .ranking-title { font-size: 10px; text-align: center; border-bottom: 1px solid #000; margin-bottom: 5px; padding-bottom: 3px; }
+        .ranking-item { display: flex; justify-content: space-between; font-size: 12px; padding: 2px 0; }
+        .top1 { color: #8b6d45; font-weight: bold; font-size: 14px; }
+
+        /* --- DECRETO REAL (NEGRO Y ORO) --- */
         .card-oficial {
             background: #000 url('https://www.transparenttextures.com/patterns/dark-leather.png') !important;
             border: 2px solid var(--oro) !important; padding: 15px; margin-bottom: 25px;
             box-shadow: 0 5px 20px rgba(212, 175, 55, 0.4);
         }
-        .card-oficial h3 { color: var(--oro) !important; font-family: 'Cinzel'; border-bottom: 1px solid var(--oro); padding-bottom: 5px; }
+        .card-oficial h3 { color: var(--oro) !important; font-family: 'Cinzel'; border-bottom: 1px solid var(--oro); }
         .card-oficial p, .card-oficial small { color: #f0f0f0 !important; }
-        .card-oficial .voto-btn { border-color: var(--oro); color: var(--oro); }
 
-        /* --- VOCIFERADORA (ALUMNOS) --- */
+        /* --- VOCIFERADORA (ROJO Y FUEGO) --- */
         .vociferadora {
             background: linear-gradient(135deg, #8b0000 0%, #ff1a1a 100%) !important;
             padding: 12px; margin-bottom: 20px; border: none !important;
-            animation: pulse 1.5s infinite alternate, shake 0.2s infinite;
-            box-shadow: 0 0 20px var(--sangre);
+            animation: shake 0.2s infinite; box-shadow: 0 0 20px var(--sangre);
         }
-        .vociferadora h3, .vociferadora p, .vociferadora small { color: white !important; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); }
-        @keyframes pulse { from { filter: brightness(1); } to { filter: brightness(1.2); } }
+        .vociferadora h3, .vociferadora p, .vociferadora small { color: white !important; }
         @keyframes shake { 0% { transform: rotate(0.2deg); } 100% { transform: rotate(-0.2deg); } }
 
-        /* --- CONFESIONES --- */
-        .confesion-card {
-            background: var(--confesion); border-left: 5px solid var(--oro-oscuro);
-            padding: 10px; margin: 10px 0; font-family: 'Special Elite';
-            box-shadow: 3px 3px 10px rgba(0,0,0,0.1); transform: rotate(-1deg);
-        }
-
-        /* --- UI COMPONENTES --- */
-        .sec-title { font-family: 'Cinzel'; background: #000; color: var(--oro); text-align: center; padding: 5px; font-size: 11px; margin: 20px 0 10px 0; letter-spacing: 2px; }
-        .magic-form { background: rgba(0,0,0,0.04); padding: 12px; border: 1px dashed #000; margin-top: 15px; }
-        input, textarea, select { width: 100%; padding: 8px; margin: 4px 0; border: 1px solid #000; font-family: 'Special Elite'; font-size: 13px; box-sizing: border-box; }
-        .btn-send { background: #000; color: var(--oro); border: 1px solid var(--oro); padding: 12px; width: 100%; font-family: 'Cinzel'; font-weight: bold; cursor: pointer; margin-top: 5px; }
-        .voto-btn { background: none; border: 1px solid #000; padding: 4px 8px; font-family: 'Cinzel'; font-size: 9px; cursor: pointer; transition: 0.2s; }
-        .voto-btn:hover { background: #000; color: #fff; }
-
-        /* --- RANGOS --- */
-        .badge { font-size: 8px; padding: 2px 4px; border-radius: 3px; margin-left: 5px; text-transform: uppercase; }
-        .r-leyenda { background: var(--oro); color: #000; font-weight: 900; }
-        .r-cronista { background: #333; color: #fff; }
+        /* --- UI --- */
+        .sec-title { font-family: 'Cinzel'; background: #000; color: var(--oro); text-align: center; padding: 5px; font-size: 11px; margin: 20px 0 10px 0; }
+        .btn-send { background: #000; color: var(--oro); border: 1px solid var(--oro); padding: 12px; width: 100%; font-family: 'Cinzel'; font-weight: bold; cursor: pointer; }
+        input, textarea, select { width: 100%; padding: 8px; margin: 4px 0; border: 1px solid #000; font-family: 'Special Elite'; box-sizing: border-box; }
+        .voto-btn { background: none; border: 1px solid #000; padding: 4px 8px; font-family: 'Cinzel'; font-size: 9px; cursor: pointer; }
+        .confesion-card { background: #f2e9d0; border-left: 5px solid var(--oro-oscuro); padding: 10px; margin: 10px 0; font-family: 'Special Elite'; transform: rotate(-1deg); }
     </style>
 </head>
 <body>
 
 <div class="newspaper">
     <div id="login-zone" style="text-align:center; padding: 40px 10px;">
-        <h1 style="font-family:'Cinzel'">IDENTIFÍQUESE</h1>
-        <input type="text" id="u-n" placeholder="Nombre de Mago/Bruja">
+        <h1 style="font-family:'Cinzel'">EL PROFETA</h1>
+        <input type="text" id="u-n" placeholder="Tu Nombre">
         <input type="password" id="u-p" placeholder="Contraseña">
         <select id="u-h">
             <option value="GRYFFINDOR">🦁 GRYFFINDOR</option>
@@ -97,11 +91,6 @@
 
     <div id="main-web" style="display:none;">
         <header>
-            <div class="status-bar">
-                <span id="clima-txt">🌤️ Despejado</span>
-                <span id="lectores-txt">👥 14 Magos online</span>
-                <span>📶 Flu: Estable</span>
-            </div>
             <h1>EL PROFETA</h1>
             <div class="meta-bar">
                 <span id="f-m"></span>
@@ -110,35 +99,38 @@
             </div>
         </header>
 
-        <div class="rumores-box"><div id="tick">Leyendo pergaminos...</div></div>
+        <div class="banner-premio">
+            🏆 PREMIO SEMANAL: 15.000 GALEONES 💰<br>
+            <small>Al mago/bruja con más "Gritos" acumulados</small>
+        </div>
+
+        <div class="ranking-box" id="ranking-list">
+            <div class="ranking-title">✦ LÍDERES DE LA SEMANA ✦</div>
+            </div>
 
         <div id="feed-oficial"></div>
         <div id="feed-confesiones"></div>
         <div id="feed-comunidad"></div>
 
-        <div class="sec-title">PLUMA VUELAPLUMA</div>
-        <div class="magic-form">
+        <div class="sec-title">REDACTAR</div>
+        <div class="magic-form" style="background: rgba(0,0,0,0.04); padding: 12px; border: 1px dashed #000;">
             <select id="t-tipo" onchange="toggleForm()">
-                <option value="noticia">Noticia Estándar</option>
-                <option value="confesion">Enviar Confesión Secreta</option>
+                <option value="noticia">Publicar Noticia</option>
+                <option value="confesion">Confesión Anónima</option>
             </select>
-
             <div id="form-noticia">
-                <input type="text" id="t-t" placeholder="Título impactante">
-                <textarea id="t-m" rows="3" placeholder="Relata los hechos..."></textarea>
-                <input type="text" id="t-i" placeholder="URL de Imagen (opcional)">
+                <input type="text" id="t-t" placeholder="Título">
+                <textarea id="t-m" rows="3" placeholder="Contenido..."></textarea>
                 <div style="display:flex; gap:5px;">
                     <select id="t-r"><option value="ALUMNO">Alumno</option><option value="OFICIAL">Escritor Real</option></select>
                     <select id="t-e"><option value="normal">Pergamino</option><option value="vociferadora">Vociferadora 🔥</option></select>
                 </div>
             </div>
-
             <div id="form-confesion" style="display:none;">
-                <textarea id="t-conf" rows="3" placeholder="Escribe tu secreto más profundo..."></textarea>
-                <label style="font-size:10px; font-family:'Cinzel'"><input type="checkbox" id="t-anon"> ¿Mantener Anonimato?</label>
+                <textarea id="t-conf" rows="3" placeholder="Tu secreto..."></textarea>
+                <label style="font-size:10px; font-family:'Cinzel'"><input type="checkbox" id="t-anon" checked> Anonimato</label>
             </div>
-
-            <button class="btn-send" onclick="publicarTodo()">ENVIAR A REDACCIÓN ✨</button>
+            <button class="btn-send" onclick="publicarTodo()">PUBLICAR ✨</button>
         </div>
     </div>
 </div>
@@ -146,26 +138,20 @@
 <script>
     const DB = "https://profeta-9c8df-default-rtdb.firebaseio.com/periodico";
     const CLAVE_REAL = "Orion2026";
-    let sesion = JSON.parse(localStorage.getItem('p_vFinal'));
-
-    const RUMORES = ["¿Snape sonriendo? Imposible.", "Visto: Elfo con calcetines de colores.", "El pasadizo de la bruja tuerta está bloqueado.", "Nuevas grageas sabor a calcetín sucio."];
-    const CLIMAS = ["🌤️ Despejado", "🌧️ Lluvia de ranas", "🌫️ Niebla intensa", "⚡ Tormenta Eléctrica"];
+    let sesion = JSON.parse(localStorage.getItem('p_vFinal_v2'));
 
     function login() {
         const n = document.getElementById('u-n').value.trim();
-        const p = document.getElementById('u-p').value.trim();
-        if(!n || !p) return;
+        if(!n) return;
         sesion = { n, h: document.getElementById('u-h').value };
-        localStorage.setItem('p_vFinal', JSON.stringify(sesion));
+        localStorage.setItem('p_vFinal_v2', JSON.stringify(sesion));
         start();
     }
-
-    function logout() { localStorage.removeItem('p_vFinal'); location.reload(); }
-
+    function logout() { localStorage.removeItem('p_vFinal_v2'); location.reload(); }
     function toggleForm() {
-        const tipo = document.getElementById('t-tipo').value;
-        document.getElementById('form-noticia').style.display = tipo === 'noticia' ? 'block' : 'none';
-        document.getElementById('form-confesion').style.display = tipo === 'confesion' ? 'block' : 'none';
+        const t = document.getElementById('t-tipo').value;
+        document.getElementById('form-noticia').style.display = t === 'noticia' ? 'block' : 'none';
+        document.getElementById('form-confesion').style.display = t === 'confesion' ? 'block' : 'none';
     }
 
     function start() {
@@ -173,37 +159,21 @@
         document.getElementById('login-zone').style.display='none';
         document.getElementById('main-web').style.display='block';
         document.getElementById('f-m').innerText = new Date().toLocaleDateString('es-ES',{day:'numeric',month:'short'}).toUpperCase();
-        document.getElementById('clima-txt').innerText = CLIMAS[Math.floor(Math.random()*CLIMAS.length)];
-        document.getElementById('lectores-txt').innerText = `👥 ${Math.floor(Math.random()*20)+5} Magos online`;
-        
-        setInterval(()=> {
-            document.getElementById('h-m').innerText = new Date().toLocaleTimeString('es-ES',{hour:'2-digit',minute:'2-digit'});
-            document.getElementById('tick').innerText = RUMORES[Math.floor(Math.random()*RUMORES.length)];
-        }, 5000);
+        setInterval(()=> { document.getElementById('h-m').innerText = new Date().toLocaleTimeString('es-ES',{hour:'2-digit',minute:'2-digit'}); }, 1000);
         load();
-    }
-
-    function getPrestigio(votos) {
-        if(votos >= 15) return '<span class="badge r-leyenda">Leyenda</span>';
-        if(votos >= 5) return '<span class="badge r-cronista">Cronista</span>';
-        return '<span class="badge">Aprendiz</span>';
     }
 
     function publicarTodo() {
         const tipo = document.getElementById('t-tipo').value;
         const id = "ID"+Date.now();
         let data = { id, autor: sesion.n, casa: sesion.h, time: Date.now(), v: {}, c: 0 };
-
         if(tipo === 'noticia') {
             const r = document.getElementById('t-r').value;
-            if(r === "OFICIAL" && prompt("Llave Ministerial:") !== CLAVE_REAL) return;
-            data = {...data, tipo: 'noticia', titulo: document.getElementById('t-t').value, texto: document.getElementById('t-m').value, img: document.getElementById('t-i').value, rango: r, estilo: document.getElementById('t-e').value };
+            if(r === "OFICIAL" && prompt("Clave:") !== CLAVE_REAL) return;
+            data = {...data, tipo:'noticia', titulo: document.getElementById('t-t').value, texto: document.getElementById('t-m').value, rango:r, estilo:document.getElementById('t-e').value};
         } else {
-            const anon = document.getElementById('t-anon').checked;
-            data = {...data, tipo: 'confesion', texto: document.getElementById('t-conf').value, anonimo: anon };
+            data = {...data, tipo:'confesion', texto: document.getElementById('t-conf').value, anonimo: document.getElementById('t-anon').checked};
         }
-
-        if(!data.texto) return;
         fetch(`${DB}/${id}.json`,{method:'PUT',body:JSON.stringify(data)}).then(()=>location.reload());
     }
 
@@ -211,29 +181,34 @@
         fetch(`${DB}.json`).then(r=>r.json()).then(data => {
             if(!data) return;
             const items = Object.values(data).sort((a,b)=>b.time - a.time);
-            let hOf = "", hAl = "", hConf = "";
+            let hOf="", hAl="", hConf="";
+            let scores = {};
 
             items.forEach(n => {
-                const voted = n.v && n.v[sesion.n];
-                if(n.tipo === 'confesion') {
-                    hConf += `<div class="confesion-card"><b>🤫 CONFESIÓN:</b><br>"${n.texto}"<br><small>— ${n.anonimo ? 'Anónimo' : n.autor}</small></div>`;
-                } else {
+                // Contar puntos para el ranking (solo noticias, no confesiones)
+                if(n.tipo === 'noticia') {
+                    scores[n.autor] = (scores[n.autor] || 0) + (n.c || 0);
+                    const voted = n.v && n.v[sesion.n];
                     const cls = n.rango === "OFICIAL" ? "card-oficial" : "card-alumno";
                     const est = n.estilo === 'vociferadora' ? 'vociferadora' : '';
-                    const html = `
-                        <div class="article ${cls} ${est}">
-                            <h3>${n.titulo}</h3>
-                            <small>🖋️ ${n.autor} ${getPrestigio(n.c || 0)}</small>
-                            ${n.img ? `<img src="${n.img}" style="width:100%; border:1px solid #000; margin:5px 0;">` : ''}
-                            <p>${n.texto}</p>
-                            <div style="text-align:right;"><button class="voto-btn" onclick="votar('${n.id}')" ${voted?'disabled':''}>${voted ? 'SELLADO' : '🔥 GRITAR ('+(n.c||0)+')'}</button></div>
-                        </div>`;
+                    const html = `<div class="article ${cls} ${est}"><h3>${n.titulo}</h3><small>🖋️ ${n.autor}</small><p>${n.texto}</p><div style="text-align:right;"><button class="voto-btn" onclick="votar('${n.id}')" ${voted?'disabled':''}>${voted?'SELLADO':'🔥 GRITAR ('+(n.c||0)+')'}</button></div></div>`;
                     if(n.rango === "OFICIAL") hOf += html; else hAl += html;
+                } else {
+                    hConf += `<div class="confesion-card"><b>🤫 CONFESIÓN:</b><br>"${n.texto}"<br><small>— ${n.anonimo?'Anónimo':n.autor}</small></div>`;
                 }
             });
+
+            // Generar Ranking
+            const top = Object.entries(scores).sort((a,b)=>b[1]-a[1]).slice(0,3);
+            let rHtml = '<div class="ranking-title">✦ LÍDERES DE LA SEMANA ✦</div>';
+            top.forEach((s, i) => {
+                rHtml += `<div class="ranking-item ${i===0?'top1':''}"><span>${i+1}. ${s[0]}</span><span>${s[1]} 🔥</span></div>`;
+            });
+            document.getElementById('ranking-list').innerHTML = rHtml;
+
             document.getElementById('feed-oficial').innerHTML = hOf ? `<div class="sec-title">DECRETOS REALES</div>`+hOf : "";
             document.getElementById('feed-confesiones').innerHTML = hConf ? `<div class="sec-title">BUZÓN DE SECRETOS</div>`+hConf : "";
-            document.getElementById('feed-comunidad').innerHTML = `<div class="sec-title">NOTICIAS DE LA COMUNIDAD</div>`+hAl;
+            document.getElementById('feed-comunidad').innerHTML = `<div class="sec-title">NOTICIAS</div>`+hAl;
         });
     }
 
